- Create Login and Register screens - Use the Firebase method to login with email and password - After a successful Login or Register the Shopping Lists page is opened - Both pages contain an action bar with the name of the page

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -10,7 +10,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.RegisterFragment">
-
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_register_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:textAlignment="center"
+        app:titleTextColor="@android:color/white"
+        app:theme="@style/ToolbarStyle"
+        >
+    </android.support.v7.widget.Toolbar>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/email_register_id"
