--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -9,7 +9,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.RegisterFragment">
+    tools:context=".fragments.RegisterFragment">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_register_id"
         android:layout_width="match_parent"
