--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.ShoppingListActivity">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_list_page_id"
         android:layout_width="0dp"
@@ -49,17 +51,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ListView
-                android:id="@+id/list_id"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/current_list_id_text" />
-
             <TextView
                 android:id="@+id/completed_list_id_text"
                 android:layout_width="wrap_content"
@@ -76,7 +67,7 @@
                 app:layout_constraintVertical_bias="0.479" />
 
             <ListView
-                android:id="@+id/list_id_completed"
+                android:id="@+id/list_items_id"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
@@ -111,8 +102,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ListView
+                android:id="@+id/list_id"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/current_list_id_text" />
+
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
