--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,7 +13,7 @@
     >
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_id"
+        android:id="@+id/toolbar_add_sl_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
