--- a/app/src/main/res/layout/add_shopping_list.xml
+++ b/app/src/main/res/layout/add_shopping_list.xml
@@ -122,7 +122,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/list_items_id" />
 
-            <ListView
+            <LinearLayout
                 android:id="@+id/list_items_id"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -131,10 +131,11 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/items_id"></ListView>
+                app:layout_constraintTop_toBottomOf="@+id/items_id"></LinearLayout>
 
 
         </android.support.constraint.ConstraintLayout>
