--- a/app/src/main/res/layout/activity_list_details.xml
+++ b/app/src/main/res/layout/activity_list_details.xml
@@ -64,7 +64,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="544dp"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar_listDetails">
