Add Friend Part 1:  - Using Firestone to send notifications to a specified user by email.(from the keyboard)  - Adding UserData model to Firebase database Part 1 purpose is to send data to Firebase Cloud Firestone

--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -19,6 +19,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@android:color/white">
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_person_add_black_24dp"
+            android:id="@+id/addFriend"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
