Adding friend list:  - In popup menu is a Friend List item, touching this button will show a new activity with a listview of friends (Confirmed friends).

--- a/app/src/main/res/layout/activity_friend_list.xml
+++ b/app/src/main/res/layout/activity_friend_list.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.FriendListActivity">
+    tools:context=".activities.FriendListActivity"
+    >
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_listDetails"
+        android:id="@+id/toolbar_friend_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
@@ -18,7 +19,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@android:color/white">
-
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -27,17 +27,16 @@
                 android:id="@+id/titlu_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="TextView"
+                android:layout_gravity="center"
+                android:text="Friend List"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/deleteListDetails"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintHorizontal_bias="0.336"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -58,8 +57,8 @@
 
     <ListView
         android:id="@+id/list_friends_id"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        ></ListView>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_friend_id"></ListView>
 </android.support.constraint.ConstraintLayout>
